--- a/data/devtools-opener.html
+++ b/data/devtools-opener.html
@@ -5,6 +5,7 @@
     <title>DevTools Extension</title>
   </head>
   <body>
+    <script src="./lib/html2canvas.min.js"></script>
     <script src="devtools-opener.js"></script>
   </body>
 </html>
