--- a/data/devtools-panel.html
+++ b/data/devtools-panel.html
@@ -6,43 +6,40 @@
     <meta http-equiv="Content-Security-Policy" content="default-src chrome:; object-src 'none'" />
     <link rel="stylesheet" type="text/css" href="aboutautofill.css">
     <script src="./autofill-inspector.js"></script>
+    <script src="./lib/html2canvas.min.js"></script>
   </head>
-  <body>
-    <div id="main"></div>
-    <div id="modal-root"></div>
-    <body class="wide-container">
-    <div id="field">
-      <input type="button" id="autofill-inspect-start-button" value="Click to inspect!"/>
-      <h2 class="major-section">Field Info</h2>
-      <fieldset>
-        <legend>Filter Options</legend>
-        <div>
-          <input type="checkbox" id="field-info-filter-by-visibility" />
-          <label for="visibility">Include Invisible Fields</label>
+  <body class="theme-body">
+    <div id="autofill-panel" class="mainFrame">
+      <div id="field" class="devtools-toolbar" role="toolbar">
+        <button id="autofill-inspect-start-button">Click to Inspect</button>
+        <span class="devtools-separator"></span>
+        <label class="devtools-checkbox-label devtools-cache-checkbox">
+          <input type="checkbox" class="devtools-checkbox"/>
+          Show Invisible
+        </label>
+        <span class="devtools-separator"></span>
+        <label class="devtools-checkbox-label devtools-cache-checkbox">
+          <input type="checkbox" class="devtools-checkbox"/>
+          Show Unknown
+        </label>
+        <span class="devtools-separator"></span>
+        <div role="group">
+          <span role="presentation">Fields to Display</span>
+          <button id="autofill-display-fields" class="devtools-dropdown-button"></button>
         </div>
-        <div>
-          <input type="checkbox" id="field-info-filter-by-validity" />
-          <labelfor="validity">Include Unknown Fields</label>
-        </div>
-      </fieldset>
-      <table id="form-analsysis-table">
-        <thead>
-          <tr id="form-analysis-head-row">
-            <th id="col-root">Root</th>
-            <th id="col-section">Section</th>
-            <th id="col-frame">Frame</th>
-            <th id="col-identifier">Id / Name</th>
-            <th id="col-fieldName">Field Name</th>
-            <th id="col-reason">Reason</th>
-            <th id="col-isVisible">Visible</th>
-            <th id="col-part">Part</th>
-            <th id="col-confidence">Confidence</th>
-          </tr>
-        </thead>
-        <tbody id="form-analysis-table-body">
-          <!-- data is generated in javascript -->
-        </tbody>
-      </table>
+        <span class="devtools-separator"></span>
+        <button id="autofill-export-button" class="devtools-button autofill-settings-menu-button"></button>
+      </div>
+      <span>
+        <table id="form-analsysis-table" class="treeTable">
+          <thead>
+            <tr id="form-analysis-head-row" class="treeHeaderRow"></tr>
+          </thead>
+          <tbody id="form-analysis-table-body">
+            <!-- data is generated in javascript -->
+          </tbody>
+        </table>
+      </span>
     </div>
   </body>
 </html>
