--- a/data/devtools-panel.html
+++ b/data/devtools-panel.html
@@ -6,10 +6,10 @@
     <meta http-equiv="Content-Security-Policy" content="default-src chrome:; object-src 'none'" />
     <link rel="stylesheet" type="text/css" href="aboutautofill.css">
     <script src="./autofill-inspector.js"></script>
-    <script src="./lib/html2canvas.min.js"></script>
+    <script src="./libs/html2canvas.min.js"></script>
   </head>
-  <body class="theme-body">
-    <div id="autofill-panel" class="mainFrame">
+  <body id="autofill-panel" class="theme-body">
+    <div class="mainFrame">
       <div id="field" class="devtools-toolbar" role="toolbar">
         <button id="autofill-inspect-start-button">Click to Inspect</button>
         <span class="devtools-separator"></span>
@@ -23,12 +23,22 @@
           Show Unknown
         </label>
         <span class="devtools-separator"></span>
-        <div role="group">
-          <span role="presentation">Fields to Display</span>
-          <button id="autofill-display-fields" class="devtools-dropdown-button"></button>
-        </div>
+        <button id="autofill-screenshot-button" title="Screenshot form" class="devtools-button autofill-screenshot-button"></button>
         <span class="devtools-separator"></span>
-        <button id="autofill-export-button" class="devtools-button autofill-settings-menu-button"></button>
+        <button id="autofill-export-button" title="Export Inspect Result" class="devtools-button autofill-export-button"></button>
+        <span class="devtools-separator"></span>
+        <button id="autofill-download-button" title="Download the Web Page" class="devtools-button autofill-download-button"></button>
+        <span class="devtools-separator"></span>
+        <button id="autofill-report-button" title="Report Autofill Site Compatibility Issue" class="devtools-button autofill-report-button"></button>
+        <label class="devtools-checkbox-label devtools-cache-checkbox">
+          <input id="autofill-add-address-button" type="checkbox" class="devtools-checkbox"/>
+          Autofill Test Address
+        </label>
+        <span class="devtools-separator"></span>
+        <label class="devtools-checkbox-label devtools-cache-checkbox">
+          <input id="autofill-add-credit-card-button" type="checkbox" class="devtools-checkbox"/>
+          Autofill Test Credit Card
+        </label>
       </div>
       <span>
         <table id="form-analsysis-table" class="treeTable">
