support generate testcase

--- a/data/devtools-panel.html
+++ b/data/devtools-panel.html
@@ -32,6 +32,10 @@
         <button id="autofill-download-button" title="Download the Web Page" class="devtools-button autofill-download-button"></button>
         <span class="devtools-separator"></span>
         <button id="autofill-report-button" title="Report Autofill Site Compatibility Issue" class="devtools-button autofill-report-button"></button>
+        <span class="devtools-separator"></span>
+        <button id="autofill-edit-field-button" title="Edit A Field" class="devtools-button autofill-edit-field-button"></button>
+        <span class="devtools-separator"></span>
+        <button id="autofill-generate-test-button" title="Generate A Testcase" class="devtools-button autofill-generate-test-button"></button>
         <label class="devtools-checkbox-label devtools-cache-checkbox">
           <input id="autofill-add-address-button" type="checkbox" class="devtools-checkbox"/>
           Show Test Address
