--- a/data/devtools-panel.html
+++ b/data/devtools-panel.html
@@ -57,6 +57,9 @@
             </tbody>
           </table>
         </div>
+        <div class="devtools-toolbar devtools-toolbar-bottom">
+          <div class="status-bar-label autofill-progress-status">testing</div>
+        </div>
       </div>
     </div>
 
