Fix a lot of stuff

--- a/extension/content/devtools-panel.html
+++ b/extension/content/devtools-panel.html
@@ -14,28 +14,26 @@
         <button id="autofill-inspect-start-button">Click to Inspect</button>
         <span class="devtools-separator"></span>
         <label class="devtools-checkbox-label devtools-cache-checkbox">
-          <input type="checkbox" class="devtools-checkbox"/>
+          <input id="autofill-show-invisible-button" type="checkbox" class="devtools-checkbox"/>
           Show Invisible
         </label>
         <span class="devtools-separator"></span>
         <label class="devtools-checkbox-label devtools-cache-checkbox">
-          <input type="checkbox" class="devtools-checkbox"/>
+          <input id="autofill-show-unknown-button" type="checkbox" class="devtools-checkbox"/>
           Show Unknown
         </label>
         <span class="devtools-separator"></span>
         <button id="autofill-inspect-element-button" title="Inspect Selected Element" class="devtools-button autofill-inspect-button"></button>
+        <button id="autofill-edit-field-button" title="Edit A Field" class="devtools-button autofill-edit-field-button"></button>
+        <span class="devtools-separator"></span>
         <span class="devtools-separator"></span>
         <button id="autofill-screenshot-button" title="Screenshot form" class="devtools-button autofill-screenshot-button"></button>
         <span class="devtools-separator"></span>
-        <button id="autofill-export-button" title="Export Inspect Result" class="devtools-button autofill-export-button"></button>
-        <span class="devtools-separator"></span>
         <button id="autofill-download-button" title="Download the Web Page" class="devtools-button autofill-download-button"></button>
         <span class="devtools-separator"></span>
+        <button id="autofill-generate-test-button" title="Generate A Testcase" class="devtools-button autofill-generate-test-button"></button>
         <button id="autofill-report-button" title="Report Autofill Site Compatibility Issue" class="devtools-button autofill-report-button"></button>
         <span class="devtools-separator"></span>
-        <button id="autofill-edit-field-button" title="Edit A Field" class="devtools-button autofill-edit-field-button"></button>
-        <span class="devtools-separator"></span>
-        <button id="autofill-generate-test-button" title="Generate A Testcase" class="devtools-button autofill-generate-test-button"></button>
         <label class="devtools-checkbox-label devtools-cache-checkbox">
           <input id="autofill-add-address-button" type="checkbox" class="devtools-checkbox"/>
           Show Test Address
